[package]
name = "yubikey_encrypt"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
rsa = "0.9.6"
yubikey = { version = "0.8.0", features = ["untested"] }
subtle = { version = "2.1.1", default-features = false }
clap = { version = "4.4.18", features = ["derive"] }
rpassword = "7.3.1"
aes-gcm = "0.10.3"
argon2 = "0.5.3"
